--- a/workflows/deploy.yml
+++ b/workflows/deploy.yml
@@ -32,6 +32,6 @@ jobs:
     - name: Deploy to Elastic Beanstalk
       run: |
         eb init -p docker --region us-east-1
-        eb use ProdDocker-env
+        eb use churn 
         eb deploy 
 
