--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,7 @@
 FROM python:3.9-slim
-WORKDIR /app
+WORKDIR /
 COPY . .
 RUN pip install -r requirements.txt
+# EXPOSE the application port
+EXPOSE 5001
 CMD ["gunicorn", "--bind", "0.0.0.0:5001", "app:app"]
